force-app/main/default/objects/Tweet__c/Tweet__c.object-meta.xml
<CustomObject>
    <description>ツイートに関するデータ</description>
    <label>Tweet</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>TweetID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>