force-app/main/default/objects/Tweet__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <description>ツイートの本文</description>
    <label>本文</label>
    <type>TextArea</type>
</CustomField>