force-app/main/default/objects/Tweet__c/fields/commented_id__c.field-meta.xml
<CustomField>
    <fullName>commented_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>コメント先のツイートのID</description>
    <label>コメント先ツイート</label>
    <referenceTo>Tweet__c</referenceTo>
    <relationshipLabel>Tweet</relationshipLabel>
    <relationshipName>Comment</relationshipName>
    <type>Lookup</type>
</CustomField>