force-app/main/default/objects/Tweet__c/fields/like_count__c.field-meta.xml
<CustomField>
    <fullName>like_count__c</fullName>
    <label>いいね</label>
    <summaryForeignKey>Good__c.good_tweet_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>