force-app/main/default/objects/Tweet__c/fields/like_num__c.field-meta.xml
<CustomField>
    <fullName>like_num__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ツイートに対していいねされた数</description>
    <label>いいね数</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>