force-app/main/default/objects/Tweet__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>タイトル</label>
    <length>30</length>
    <type>Text</type>
</CustomField>